[gd_scene load_steps=8 format=3 uid="uid://bgwdpcj0rg6mx"]

[ext_resource type="Script" path="res://Assets/Scripts/UI/Wolf_Alamanac_Book/Wolf_Almanac_Book.gd" id="1_icity"]
[ext_resource type="Texture2D" uid="uid://cjaxxmfegjphe" path="res://Assets/Image/Background/UI/Wolf_Alamac_Book/opened_notebook_isolated_on_background.png" id="2_asy1l"]
[ext_resource type="FontFile" uid="uid://bv6xsykw7vcai" path="res://Assets/Fonts/DisposableDroidBB_bld.ttf" id="3_aa4bj"]
[ext_resource type="FontFile" uid="uid://ccpiomxr4hnwi" path="res://Assets/Fonts/DisposableDroidBB_bldital.ttf" id="4_5f8cm"]
[ext_resource type="FontFile" uid="uid://bsmkjcem4b3i1" path="res://Assets/Fonts/DisposableDroidBB.ttf" id="5_pbudi"]
[ext_resource type="FontFile" uid="uid://b37vftxdinymo" path="res://Assets/Fonts/DisposableDroidBB_ital.ttf" id="6_c56tv"]
[ext_resource type="Texture2D" uid="uid://c6h50ut55x04r" path="res://Assets/Image/Buttons/right-arrow.png" id="7_7cf6d"]

[node name="Mexican_Wolf_Almanac" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.0
offset_bottom = 198.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_icity")

[node name="Book_Texturee" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1280, 0)
layout_mode = 0
offset_right = 1280.0
offset_bottom = 903.0
texture = ExtResource("2_asy1l")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="Wolf_Picture" type="TextureRect" parent="."]
custom_minimum_size = Vector2(430, 615)
layout_mode = 0
offset_left = 156.0
offset_top = 26.0
offset_right = 586.0
offset_bottom = 641.001
expand_mode = 1

[node name="Name_Wolf" type="Label" parent="."]
layout_mode = 0
offset_left = 821.0
offset_top = 35.0
offset_right = 927.0
offset_bottom = 59.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_aa4bj")
theme_override_font_sizes/font_size = 24
text = "WOLF NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name_Species" type="Label" parent="."]
layout_mode = 0
offset_left = 665.0
offset_top = 79.0
offset_right = 740.0
offset_bottom = 103.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_aa4bj")
theme_override_font_sizes/font_size = 24
text = "SPECIES"
vertical_alignment = 1

[node name="Species" type="Label" parent="."]
layout_mode = 0
offset_left = 841.0
offset_top = 79.0
offset_right = 982.0
offset_bottom = 103.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_5f8cm")
theme_override_font_sizes/font_size = 24
text = "Species_Name"
vertical_alignment = 1

[node name="Height_sizE" type="Label" parent="."]
layout_mode = 0
offset_left = 665.0
offset_top = 127.0
offset_right = 729.0
offset_bottom = 151.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_aa4bj")
theme_override_font_sizes/font_size = 24
text = "HEIGHT"
vertical_alignment = 1

[node name="Height_Label" type="Label" parent="."]
custom_minimum_size = Vector2(175, 25)
layout_mode = 0
offset_left = 841.0
offset_top = 127.0
offset_right = 1016.0
offset_bottom = 152.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_aa4bj")
theme_override_font_sizes/font_size = 24
text = "HEIGHT SIZE"
vertical_alignment = 1

[node name="Weight" type="Label" parent="."]
layout_mode = 0
offset_left = 665.0
offset_top = 175.0
offset_right = 731.0
offset_bottom = 199.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_aa4bj")
theme_override_font_sizes/font_size = 24
text = "WEIGHT"
vertical_alignment = 1

[node name="Weight_Label" type="Label" parent="."]
custom_minimum_size = Vector2(175, 25)
layout_mode = 0
offset_left = 841.0
offset_top = 175.0
offset_right = 1016.0
offset_bottom = 200.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_aa4bj")
theme_override_font_sizes/font_size = 24
text = "WEIGHT SIZE"
vertical_alignment = 1

[node name="Length_size" type="Label" parent="."]
layout_mode = 0
offset_left = 665.0
offset_top = 223.0
offset_right = 734.0
offset_bottom = 247.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_aa4bj")
theme_override_font_sizes/font_size = 24
text = "LENGHT"
vertical_alignment = 1

[node name="Leght_Label" type="Label" parent="."]
custom_minimum_size = Vector2(175, 25)
layout_mode = 0
offset_left = 841.0
offset_top = 223.0
offset_right = 1016.0
offset_bottom = 248.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_aa4bj")
theme_override_font_sizes/font_size = 24
text = "LENGHT SIZE"
vertical_alignment = 1

[node name="CONSERVATION STATUS" type="Label" parent="."]
layout_mode = 0
offset_left = 664.0
offset_top = 260.0
offset_right = 776.0
offset_bottom = 304.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_aa4bj")
theme_override_font_sizes/font_size = 20
text = "CONSERVATION STATUS "
vertical_alignment = 1
autowrap_mode = 3
uppercase = true

[node name="Status" type="Label" parent="."]
layout_mode = 0
offset_left = 841.0
offset_top = 271.0
offset_right = 907.0
offset_bottom = 295.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_aa4bj")
theme_override_font_sizes/font_size = 24
text = "STATUS"
vertical_alignment = 1

[node name="Region" type="Label" parent="."]
layout_mode = 0
offset_left = 665.0
offset_top = 328.0
offset_right = 730.0
offset_bottom = 352.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_aa4bj")
theme_override_font_sizes/font_size = 24
text = "REGION"
vertical_alignment = 1

[node name="Region_List" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 842.0
offset_top = 326.0
offset_right = 1096.0
offset_bottom = 390.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("5_pbudi")
theme_override_fonts/bold_font = ExtResource("3_aa4bj")
theme_override_fonts/italics_font = ExtResource("6_c56tv")
theme_override_fonts/bold_italics_font = ExtResource("4_5f8cm")
theme_override_font_sizes/normal_font_size = 18
theme_override_font_sizes/bold_font_size = 18
theme_override_font_sizes/italics_font_size = 18
theme_override_font_sizes/bold_italics_font_size = 18
bbcode_enabled = true
text = "Region List"
fit_content = true
scroll_following = true
tab_size = 24
context_menu_enabled = true

[node name="Morphology" type="Label" parent="."]
layout_mode = 0
offset_left = 665.0
offset_top = 454.0
offset_right = 782.0
offset_bottom = 478.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_aa4bj")
theme_override_font_sizes/font_size = 24
text = "MORPHOLOGY
"
vertical_alignment = 1

[node name="MORPHOLOGY_details" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(257, 102)
layout_mode = 0
offset_left = 841.0
offset_top = 454.0
offset_right = 1098.0
offset_bottom = 556.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("5_pbudi")
theme_override_fonts/bold_font = ExtResource("3_aa4bj")
theme_override_fonts/italics_font = ExtResource("6_c56tv")
theme_override_fonts/bold_italics_font = ExtResource("4_5f8cm")
theme_override_font_sizes/normal_font_size = 18
theme_override_font_sizes/bold_font_size = 18
theme_override_font_sizes/italics_font_size = 18
theme_override_font_sizes/bold_italics_font_size = 18
bbcode_enabled = true
text = "Morphology Details"
fit_content = true
tab_size = 24
context_menu_enabled = true

[node name="Diets" type="Label" parent="."]
layout_mode = 0
offset_left = 665.0
offset_top = 606.0
offset_right = 716.0
offset_bottom = 630.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_aa4bj")
theme_override_font_sizes/font_size = 24
text = "DIETS"
vertical_alignment = 1

[node name="Diets_List" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(257, 95)
layout_mode = 0
offset_left = 841.0
offset_top = 604.0
offset_right = 1098.0
offset_bottom = 699.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("5_pbudi")
theme_override_fonts/bold_font = ExtResource("3_aa4bj")
theme_override_fonts/italics_font = ExtResource("6_c56tv")
theme_override_fonts/bold_italics_font = ExtResource("4_5f8cm")
theme_override_font_sizes/normal_font_size = 18
theme_override_font_sizes/bold_font_size = 18
theme_override_font_sizes/italics_font_size = 18
theme_override_font_sizes/bold_italics_font_size = 18
bbcode_enabled = true
text = "Diets List"
fit_content = true
scroll_following = true
tab_size = 24
context_menu_enabled = true

[node name="TextureButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_left = 49.0
offset_top = 643.0
offset_right = 113.0
offset_bottom = 707.0
texture_normal = ExtResource("7_7cf6d")
ignore_texture_size = true
stretch_mode = 0
flip_h = true

[connection signal="mouse_entered" from="TextureButton" to="." method="on_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="on_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_back_button_pressed"]
